--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <hr />
     <h2>My Projects </h2>
     <ol>
-        <li>
-            <a href="./public/movie-ranking.html">Movie Ranking Project</a>
-            <img src="./assets/images/movie-ranking.png" alt="My Movie Ranking Snapshot"/>
+         <li>
+           <p> <a href="./public/movie-ranking.html">Movie Ranking Project</a></li></p>
+            <p><img src="./assets/images/movie-ranking.png" alt="My Movie Ranking Snapshot"/></ol>p>
         </li>
+       
         <li>
-            <a href="./public/birthday-invite.html">Birthday Invite Project</a>
-            <img src="./assets/images/birthday-invite.png" alt="My Birthday Invite Snapshot"/>
+           <p><a href="./public/birthday-invite.html">Birthday Invite Project</a></p> 
+           <p> <img src="./assets/images/birthday-invite.png" alt="My Birthday Invite Snapshot"/></p>
 
         </li>
 
